feat : HTTP Request Print

--- a/server/resources/welcome.html
+++ b/server/resources/welcome.html
@@ -1,6 +1,8 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>CookHub</title>
+        <link rel="stylesheet" href="welcome.css">
     </head>
     <body>
         Welcome to CookHub!
