feat : welcome.js

--- a/server/resources/welcome.html
+++ b/server/resources/welcome.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         Welcome to CookHub!
+        <button id="greetingButton">Greeting</button>
+        <script src="welcome.js"></script>
     </body>
 </html>
